Developed a new background and fixed a visual flaw in the brief information about the game when it stuck under the add to favorites button

--- a/ui-app/src/game/game.page.css
+++ b/ui-app/src/game/game.page.css
@@ -62,6 +62,7 @@
 }
 
 .game-details {
+    margin-top: 40px !important;
     padding-left: 15px;
     padding-right: 5px;
     top: 10px;
